--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title></title>
   </head>
   <body>
+    <div id="numero1" style="color: green;">
 
+    </div>
+    <div id="numero2" style="color: red;">
+
+    </div>
     <script src="script.js" charset="utf-8"></script>
   </body>
 </html>
